--- a/hobie.html
+++ b/hobie.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pasa Tiempos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <title>Pasa tiempos</title>
-  <link rel="stylesheet" href="/sass/base.css">
+  <link rel="stylesheet" href="./sass/base.css">
 </head>
 
 <body>
@@ -35,12 +35,11 @@
     <section class="Personal">
       <div>
         <h1>Mis Pasa tiempos</h2>
-      </div>
-      <div>
-        <h2>Video Juegos</h3>
-          <p>Me he divertido jugando diferentes titulos y diferentes Sagas, algunos de mis juegos favoritos de PC,
-            X-Box, y Movil
-          </p>
+
+          <h2>Video Juegos</h3>
+            <p>Me he divertido jugando diferentes titulos y diferentes Sagas, algunos de mis juegos favoritos de PC,
+              X-Box, y Movil
+            </p>
       </div>
       <div class="container text-center">
         <div class="row">
@@ -52,7 +51,8 @@
                     <img src="./image/games/assasing1.jpg" class="d-block w-100" alt="Assasins Creed 1">
                   </div>
                   <div class="carousel-item">
-                    <img src="./image/games/assasing_ezio.jpg" class="d-block w-100" alt="Assasins Creed Ezio Coleccion">
+                    <img src="./image/games/assasing_ezio.jpg" class="d-block w-100"
+                      alt="Assasins Creed Ezio Coleccion">
                   </div>
                   <div class="carousel-item active">
                     <img src="./image/games/collect.jpeg" class="d-block w-100" alt="Assasins Creed Coleccion">
@@ -142,42 +142,41 @@
 
     <section class="Series">
       <div>
-        <h2>Series o Peliculas</h3>
-      </div>
-      <div>
+        <h2>Series o Peliculas</h2>
         <p>He visto muchas peliculas y series, pero mis favoritas estan relacionadas con videojuegos o con tecnologia,
-          algunas de ellas
-          son las que veras a continiacion.
+          algunas de ellas son las que veras a continiacion.
         </p>
       </div>
       <div class="movies">
         <div id="carouselExampleFade" class="carousel slide carousel-fade">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./image/series/avatar.jpg" class="d-block w-100" alt="...">
+              <img src="./image/series/avatar.jpg" class="d-block w-100" alt="Avatar">
             </div>
             <div class="carousel-item">
-              <img src="./image/series/bakc_mirror.jpg" class="d-block w-100" alt="...">
+              <img src="./image/series/bakc_mirror.jpg" class="d-block w-100" alt="BM">
             </div>
             <div class="carousel-item">
-              <img src="./image/series/matrix.jpg" class="d-block w-100" alt="...">
+              <img src="./image/series/matrix.jpg" class="d-block w-100" alt="Matrix">
             </div>
             <div class="carousel-item">
-              <img src="./image/series/ready.jpg" class="d-block w-100" alt="...">
+              <img src="./image/series/ready.jpg" class="d-block w-100" alt="RPO">
             </div>
             <div class="carousel-item">
-              <img src="./image/series/periferia.jpg" class="d-block w-100" alt="...">
+              <img src="./image/series/periferia.jpg" class="d-block w-100" alt="Periferia">
             </div>
             <div class="carousel-item">
-              <img src="./image/series/spare-parts.jpg" class="d-block w-100" alt="...">
+              <img src="./image/series/spare-parts.jpg" class="d-block w-100" alt="SP">
             </div>
-            
           </div>
-          <button class="carousel-control-prev" type="button  " data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+
+          <button class="carousel-control-prev" type="button  " data-bs-target="#carouselExampleFade"
+            data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+            data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
@@ -188,13 +187,12 @@
 
     <section class="Hamburguesa">
       <div>
-        <h2>En busqueda de la Hamburguesa Perfecta</h2>        
-      </div>
-      <div>
+        <h2>En busqueda de la Hamburguesa Perfecta</h2>
+
         <p>Me encata salir por la tarde un fin de semana o despeus de un largo dia de trabajo
-          ir a un restaurante y pedir la hamburguesa de la casa o pedir la mas grande, porque me gsuta 
+          ir a un restaurante y pedir la hamburguesa de la casa o pedir la mas grande, porque me gsuta
           catar hamburguesas, Soy Catador de Hamburguesa XD, una cerveza bien fria para acompanar, estas
-          fotos son de las hamburguesas que he considerado que son muy ricas a diferencia de otras, debajo 
+          fotos son de las hamburguesas que he considerado que son muy ricas a diferencia de otras, debajo
           de cada imagen aparece en que posicion la coloco de mi top 5.
         </p>
       </div>
@@ -223,11 +221,13 @@
               <img src="./image/hambur/terrazo2.jpg" class="d-block w-100" alt="...">
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
+            data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide"
+            data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
@@ -280,11 +280,11 @@
       </section>
     </section>
   </footer>
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
-    <video src="./video/tinta.mp4" loop muted autoplay></video>
+  <video src="./video/tinta.mp4" loop muted autoplay></video>
 </body>
 
 </html>
