--- a/proyectos.html
+++ b/proyectos.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Porfollio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./sass/base.css">
-    <title>Proyectos</title>
 </head>
 
 <body>
@@ -193,7 +193,7 @@
             </div>
             <div class="container">
                 <embed
-                    src="./Image/clustering/Sistema de dos tanques interconectados e implementando interfaz SCADA con análisis de detección de eventos basado en modelado de datos clustering-Función discriminante.pdf"
+                    src="./image/clustering/Sistema de dos tanques interconectados e implementando interfaz SCADA con análisis de detección de eventos basado en modelado de datos clustering-Función discriminante.pdf"
                     type="application/pdf" width="100%" height="800px" />
             </div>
         </section>
